--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * {
 	font-family: "Pacifico";
+	margin: 0;
+	padding: 0;
 }
 
 html {
@@ -34,6 +36,8 @@ html {
 	border-radius: 15px;
 	background: url(mavka.png) lightgray 50% / cover no-repeat;
 	box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.25);
+
+	margin: 16px 0;
 }
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
